--- a/css/style.css
+++ b/css/style.css
@@ -301,10 +301,6 @@ img {
   font-size: 2.5em;
 }
 
-#about-intro .icon {
-  width: 20px;
-}
-
 #contact {
   margin-bottom: 5%;
 }
@@ -326,10 +322,13 @@ img {
 }
 
 #about-intro ul .icon {
+  width: 20px;
   padding-bottom: 10px;
   margin: 0;
   margin-right: 2%;
 }
+
+
 
 #about-intro ul li, #about-intro .icon {
   display: inline-block;
@@ -348,9 +347,9 @@ img {
   vertical-align: middle;
 }
 
-#about-intro #contact .icon {
+#about-intro #contact li .icon {
   width: 13%;
-  padding-right: 2%;
+  padding-right: 3%;
 }
 
 /* art page styles */
@@ -491,11 +490,7 @@ img {
   margin-left: 2%;
 }
 
-#about-intro .icon {
-  width: 40px;
-  margin: 0;
-  margin-right: 2%;
-}
+
 
 /* links */
 a {
