--- a/css/queries.css
+++ b/css/queries.css
@@ -569,7 +569,7 @@ ul li {
 }
 
 #contact li {
-  width: 100%;
+  width: 50%;
   margin-left: 0;
   line-height: 1.3em;
   display: inline-block;
@@ -579,6 +579,7 @@ ul li {
 #about-intro #contact li .icon {
   width: 15px;
   margin-right: 0.5%;
+  margin-left: 5%;
 }
 
 /* about page images */
